<resources>
    <string name="app_name">Aplicacioniot</string>
    <string name="nombreapellido">Nombre y Apellido</string>
    <string name="contrasenia">Contraseña</string>
    <string name="btningresar">Ingresar</string>
    <string name="btniniciosesion">Inicio sesion</string>
    <string name="btnregistrar">Registrar</string>
    <string name="usuario">Usuario</string>"
    <string name="repetircontrasenia">Ingrese nuevamente su contraseña</string>
    <string name="correo">Correo</string>"
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="resenias">Reseñas</string>
    <string name="servicios">Servicios</string>
    <string name="busqueda">Buscar materia/informacion...</string>
    <string name="btnlenguaje">Lenguaje</string>
    <string name="lenguajei">Lenguaje y comunicacion</string>
    <string name="btndescripcion">El lenguaje es la capacidad que tiene el ser humano para expresarse y comunicarse, a través de diversos sistemas de signos: orales, escritos o gestuales. La comunicación requiere de este sistema de signos para llegar al objetivo del entendimiento común.</string>
    <string name="subir">Guardar</string>
    <string name="miusuario">Guido Araya</string>
    <string name="micontrasenia">******</string>
    <string name="micorreo">guidoandres@gmail.com</string>
    <string name="btnperfil">Actualizar</string>"
    <string name="bienvenido">Bienvenido, Guido Araya</string>
    <string name="agregar_materia">Agregar asignatura...</string>
    <string name="Informes">Elementos subidos...</string>
    <string name="reportes">Reportes hechos...</string>
    <string name="agregarnombre">Agregue nombre a la asignatura...</string>
    <string name="agregardescripcion">Agregue una descripcion...</string>"
    <string name="subirmateria">Subir</string>
    <string name="Datoscargados">Elementos subidos</string>
    <string name="Reporteshechos">Reportes subidos</string>
    <string name="btnreportar">Reportar elemento</string>
    <string name="calificarasig">Califica esta asignatura...</string>
    <string name="agregarcomentario">Dejanos tus comentarios...</string>
    <string name="ejemplo">Muy buena la asignatura de lenguaje y esta muy completa :)</string>
    <string name="reportar">Reportar asignatura...</string>
    <string name="report1">Me disgusta lo subido...</string>
    <string name="report2">No tiene coherencia lo subido...</string>
    <string name="report3">Otro...</string>"
    <string name="regresar">Volver</string>
    <string name="placeholder1">Dinos el porque ocurrio esto....</string>
    <string name="editarmateria">Estas por editar Lenguaje y comunicacion...</string>
    <string name="editarTitulo">Las Vocales</string>
    <string name="editarnombre">Editar</string>
    <string name="ejemploedit">Las vocales son letras que suenan por sí mismas y sus sonidos son fácilmente pronunciados con la voz. </string>
    <string name="calificaion1">Deficiente</string>
    <string name="califacion2">Mala</string>
    <string name="califacion3">Buena</string>
    <string name="califacion4">Excelente</string>"
    <string name="reportarmateria">Reportar materia sobre "Lenguaje y comunicacion/Las vocales"</string>
    <string name="reporte1">No se explica del todo bien</string>
    <string name="reporte2">No tiene coherencia</string>
    <string name="reporte3">Otro..</string>
    <string name="editarelperfil">Editar perfil</string>
    <string name="cambiarNombre">Desea cambiar su Nombre y Apellido</string>
    <string name="cambiarCorreo">Desea cambiar su Correo...</string>
    <string name="cambiarContrasenia">Desea cambiar su Contraseña...</string>
    <string name="ingresenuevamente">Ingrese nuevamente su nueva Contraseña...</string>""

</resources>