<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/op1"
        android:icon="@drawable/ic_action_name"
        android:orderInCategory="1"
        android:title="@string/perfil"
        app:showAsAction="withText" />
    <item
        android:id="@+id/op2"
        android:icon="@drawable/inicio"
        android:title="@string/inicio"
        app:showAsAction="withText" />
    <item
        android:id="@+id/op3"
        android:icon="@drawable/resenias"
        android:title="@string/resenias"
        app:showAsAction="withText" />
    <item
        android:id="@+id/op4"
        android:icon="@drawable/servicios"
        android:title="@string/servicios"
        app:showAsAction="withText" />
</menu>